--- a/Projeto Pessoal/index.html
+++ b/Projeto Pessoal/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-transparent navbar-inverse">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <div class="navbar-header"></div>
             <div class="navbar-form-inline" id="barra-navegacao">
@@ -21,10 +21,10 @@
                         <a class="nav-link" href="#">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Artigos</a>
+                        <a class="nav-link" href="#">Artigos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Sobre</a>
+                        <a class="nav-link" href="#">Sobre</a>
                     </li>
                 </ul>
             </div>
@@ -35,21 +35,22 @@
             <h1>Bem Vindo a um Novo Mundo</h1>
         </div>
     </div>
-    <div class="section">
+    <section id="frist">
         <div class="container">
-            <div class="col-md-6">
-                <p>testes de section da página</p>
-                <p>testes de section da página</p>
-                <p>testes de section da página</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                </div>
+                <div class="col-md-6">
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                </div>
             </div>
-            <div class="col-md-6">
-                <p>testes de section da página</p>
-                <p>testes de section da página</p>
-                <p>testes de section da página</p>
-            </div>
-        </div>
-    </div>
-    
+        </div>    
+    </section>
     <footer id="final-footer">
         <div class="container">
             <div class="row">
