--- a/Projeto Pessoal/index.html
+++ b/Projeto Pessoal/index.html
@@ -14,11 +14,11 @@
             <div class="navbar-header"></div>
             <div class="navbar-form-inline" id="barra-navegacao">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item-active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projetos</a>
+                        <a class="nav-link" href="#frist">Projetos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Artigos</a>
@@ -26,16 +26,49 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sobre</a>
                     </li>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="cover">
         <div class="text-cover">
-            <h1>Bem Vindo a um Novo Mundo</h1>
+            <h1>Bem Vindo</h1>
         </div>
     </div>
     <section id="frist">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                </div>
+                <div class="col-md-6">
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                </div>
+            </div>
+        </div>    
+    </section>
+    <section id="second">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                </div>
+                <div class="col-md-6">
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                    <p>testes de section da página</p>
+                </div>
+            </div>
+        </div>    
+    </section>
+    <section id="third">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -60,9 +93,17 @@
                     </div>
                 </div>
             </div>
+            <section class="container">
+                <div class="col-md-4">
+                   <ul class="nav-list">
+                    <li class="nav-item"><span class="glyphicons glyphicons-envelope"></span></li>
+                    <li class="nav-item"><span class="social social-instagram"></span></li>
+                    <li class="nav-item"><span class="social social-linked-in"></span></li>
+                   </ul>
+                </div>
+            </section>
         </div>
     </footer>
-    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
